# libreria_estandar_C

./: CMakeLists.txt  README.md  ejercicio_1.h  ejercicio_3.c  main.c  main.h
ejercicio1/: ejercicio_1.c
ejercicio2/: ejercicio_2.c  ejercicio_2.h
ejercicio3/: ejercicio_3.c
